# serializer version: 1
# name: test_load[ball_and_stick-mol]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-mol].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-mol].13
  [[0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]]
# ---
# name: test_load[ball_and_stick-mol].14
  [[-1.4e-02 -2.8e-02 -2.6e-03]
   [-1.4e-02 -1.9e-02  1.5e-03]
   [-9.0e-03 -3.4e-02  7.2e-03]
   [ 2.0e-02 -2.5e-05  4.0e-03]
   [-3.1e-02  1.8e-02 -8.8e-03]
   [ 2.9e-02 -1.6e-02 -1.5e-03]
   [ 3.2e-02  1.7e-02  3.0e-06]
   [-3.2e-02 -8.1e-03  2.4e-03]
   [ 4.7e-03  2.6e-02 -4.6e-03]
   [ 2.5e-03 -5.9e-03 -2.3e-03]
   [-2.1e-02 -1.5e-03 -1.5e-03]
   [ 1.6e-02  4.6e-03 -1.5e-03]
   [-3.1e-02  2.0e-02  1.2e-02]
   [ 2.6e-02 -9.6e-03  1.5e-03]
   [ 5.3e-03 -1.1e-02 -2.6e-03]
   [ 3.9e-02  9.7e-03  1.6e-03]
   [-1.0e-02 -3.6e-02 -8.9e-03]
   [ 3.6e-02 -1.3e-02 -1.5e-03]
   [-3.3e-02 -8.3e-03 -2.0e-03]
   [-2.4e-02  1.9e-02 -4.3e-03]
   [-3.0e-02  2.4e-02 -7.0e-03]
   [-2.0e-02 -2.6e-02  2.6e-03]
   [-2.2e-02 -6.6e-03 -4.0e-06]
   [ 9.1e-03 -4.9e-03 -6.0e-06]
   [ 3.3e-02  1.3e-02  6.0e-03]
   [ 2.8e-02  1.6e-02  1.1e-02]
   [-3.1e-02  1.9e-02  7.4e-03]
   [-2.6e-03 -1.3e-02  2.6e-03]
   [ 4.5e-03 -1.3e-02 -4.0e-06]
   [-2.4e-02  2.1e-02 -2.6e-03]
   [-1.3e-02  6.1e-03 -1.0e-06]
   [-2.2e-02 -2.5e-03 -4.3e-03]
   [-1.2e-02 -1.2e-02 -1.5e-03]
   [-1.6e-02 -9.5e-03 -1.5e-03]
   [ 2.9e-03 -1.1e-02 -2.6e-03]
   [-2.5e-02 -2.9e-02 -2.6e-03]
   [ 7.6e-03 -4.4e-03 -2.6e-03]
   [ 3.0e-02  1.0e-02  4.3e-03]
   [-2.5e-02 -2.5e-02 -1.5e-03]
   [ 2.2e-02 -1.3e-02 -1.5e-03]
   [ 1.6e-02 -1.7e-02  2.0e-06]
   [-1.4e-02  8.5e-03 -4.0e-03]
   [ 3.5e-02  1.1e-02 -8.5e-04]
   [ 2.7e-02  1.9e-02  9.0e-03]
   [-2.2e-02 -2.8e-02 -1.9e-03]
   [-9.1e-03  9.4e-03 -1.0e-06]
   [-1.3e-02 -3.5e-02  9.0e-03]
   [-2.0e-02 -3.0e-02  9.5e-06]
   [ 3.1e-02  2.0e-02 -5.9e-03]
   [ 2.8e-02  1.5e-02  2.3e-03]
   [-2.2e-02  3.3e-02 -3.0e-06]
   [ 2.4e-03  1.6e-02  1.5e-03]
   [-1.6e-02 -6.6e-03 -4.0e-06]
   [ 2.2e-03 -1.2e-02  1.5e-03]
   [-1.4e-02  1.2e-02 -2.6e-03]
   [-1.4e-02 -2.4e-02  1.5e-03]
   [ 3.3e-02 -1.4e-02  1.6e-03]
   [-1.3e-02  1.5e-02 -1.0e-06]
   [-8.4e-03 -9.2e-03  2.1e-03]
   [ 1.5e-02 -5.9e-04 -1.5e-03]
   [-2.7e-02  2.4e-02  4.4e-03]
   [-2.0e-02 -6.6e-03  2.7e-03]
   [ 3.2e-02  1.2e-02 -3.0e-03]
   [-1.5e-02  1.1e-02  2.6e-03]
   [-2.7e-02  2.1e-02  1.1e-02]
   [-1.0e-02 -3.6e-02  9.0e-03]
   [-2.7e-02  2.4e-02 -8.8e-03]
   [ 3.6e-02  7.5e-03 -1.5e-03]
   [-3.2e-02  2.2e-02  7.4e-03]
   [-2.3e-02 -5.0e-03 -2.7e-03]
   [-3.1e-02 -5.9e-03  2.6e-03]
   [-1.4e-02 -2.7e-02 -3.0e-03]
   [ 1.0e-03  1.1e-02 -6.0e-06]
   [ 5.6e-03 -8.3e-03 -1.5e-03]
   [-1.8e-02  3.2e-02 -3.0e-03]
   [-2.5e-02 -3.0e-02 -1.5e-03]
   [ 7.7e-05  2.1e-02  1.5e-03]
   [-2.1e-02  2.1e-02 -1.5e-03]
   [-2.9e-02 -3.0e-03 -3.9e-03]
   [-1.3e-02  8.3e-03 -1.5e-03]
   [-1.4e-02 -3.3e-02  9.0e-03]
   [-1.6e-02 -2.9e-02  4.3e-03]
   [ 2.4e-02  1.7e-03  2.6e-03]
   [ 2.9e-02  1.9e-02  1.2e-02]
   [ 3.4e-02 -1.3e-02  1.9e-03]
   [-1.2e-02 -3.2e-02  5.9e-03]
   [ 1.5e-02 -9.9e-04 -5.5e-06]
   [ 1.0e-02 -1.9e-02  2.4e-03]
   [-9.5e-03  1.1e-02 -2.4e-03]
   [ 3.9e-03  1.9e-02 -2.6e-03]
   [-2.2e-02  2.1e-02 -2.6e-03]
   [-1.8e-02  1.6e-02  3.0e-03]
   [-1.9e-02  7.1e-05  1.5e-03]
   [-2.4e-02 -9.2e-04 -4.0e-06]
   [ 9.7e-03 -1.8e-02  2.0e-06]
   [ 2.4e-02 -5.3e-03  3.0e-03]
   [-2.4e-02  1.8e-02 -2.3e-03]
   [-9.5e-03 -2.9e-02 -7.3e-03]
   [ 2.4e-02 -1.1e-02  2.6e-03]
   [-1.4e-02 -9.2e-04 -4.0e-06]]
# ---
# name: test_load[ball_and_stick-mol].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-mol].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-mol].22
  [1 1 1 1 1 1 1 2 2 1 1 1 1 1 2 1 1 1 2 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 2
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1
   1 1 2 1 2 1 1 1 1 1 1 1 1 2 1 2 1 1 2 1 2 1 1 1 2 1]
# ---
# name: test_load[ball_and_stick-mol].23
  [12.0 13.0  1.0 14.0  1.0  6.5 12.0 16.0 16.0 12.0 12.0 13.0  1.0 12.0
   12.0  1.0  1.0  1.0 16.0 12.0  1.0  6.5 12.0 12.0  6.5  1.0  1.0 13.0
   12.0 12.0 14.0 12.0 14.0 13.0 12.0  1.0 12.0 12.0  1.0 12.0 14.0 14.0
   12.0  1.0  1.0 14.0  1.0  6.5  1.0 12.0  1.0 12.0 12.0 12.0 14.0 12.0
    1.0 14.0 14.0 13.0  6.5 12.0 12.0 14.0  1.0  1.0  1.0  6.5  1.0 12.0
   16.0 12.0 12.0 12.0  1.0  1.0 14.0 12.0 16.0 14.0  1.0 12.0 14.0  1.0
    1.0  1.0 13.0 14.0 14.0 14.0 12.0 13.0 12.0 12.0 14.0 13.0 12.0  1.0
   12.0 12.0]
# ---
# name: test_load[ball_and_stick-mol].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-mol].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-mol].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-mol].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-mol].7
  [6 7 1 7 1 4 6 8 8 6 6 7 1 6 6 1 1 1 8 6 1 4 6 6 4 1 1 7 6 6 7 6 7 7 6 1 6
   6 1 6 7 7 6 1 1 7 1 4 1 6 1 6 6 6 7 6 1 7 7 7 4 6 6 7 1 1 1 4 1 6 8 6 6 6
   1 1 7 6 8 7 1 6 7 1 1 1 7 7 7 7 6 7 6 6 7 7 6 1 6 6]
# ---
# name: test_load[ball_and_stick-mol].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-mol].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-sdf].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[ball_and_stick-sdf].13
  [[0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]]
# ---
# name: test_load[ball_and_stick-sdf].14
  [[ 3.5e-02  2.0e-02 -2.5e-03]
   [-6.5e-03 -9.6e-04  1.6e-03]
   [ 1.2e-02 -2.2e-02 -1.1e-02]
   [-1.2e-02  2.2e-02  4.1e-03]
   [-2.9e-02  8.9e-03 -5.0e-03]
   [ 4.1e-02  2.0e-02  4.4e-03]
   [-4.1e-03  4.1e-02  2.3e-04]
   [-1.3e-03 -4.2e-03  2.7e-03]
   [-1.7e-04  1.4e-02 -5.0e-03]
   [-1.2e-02 -2.5e-03 -1.9e-03]
   [ 2.1e-02  4.3e-04 -1.7e-03]
   [ 1.6e-02  1.5e-02 -1.6e-03]
   [-3.1e-02  2.8e-02 -1.8e-03]
   [ 3.4e-02  2.3e-02  2.9e-04]
   [ 1.4e-02 -2.1e-02 -2.8e-03]
   [ 1.9e-02 -2.3e-02  6.4e-03]
   [ 4.4e-02  1.1e-02 -5.5e-03]
   [ 4.0e-02  2.6e-02  9.5e-03]
   [-1.4e-03 -4.4e-03 -2.3e-03]
   [-2.5e-02  1.9e-02 -4.1e-03]
   [-2.8e-02  1.5e-02 -3.1e-03]
   [ 3.7e-02  2.7e-02 -4.6e-04]
   [ 3.4e-02  1.7e-02 -2.2e-04]
   [ 1.5e-02 -1.4e-02 -1.7e-04]
   [-5.3e-03  4.1e-02  2.9e-03]
   [-1.2e-02  4.3e-02  1.9e-03]
   [-3.0e-02  2.8e-02 -7.1e-03]
   [-4.1e-03  2.0e-02  2.7e-03]
   [-8.1e-03  2.6e-02  1.9e-04]
   [ 3.6e-02  2.2e-02 -2.8e-03]
   [ 2.4e-02  9.2e-03 -1.4e-04]
   [ 3.4e-02  2.1e-02 -4.6e-03]
   [-1.3e-03  2.2e-03 -1.5e-03]
   [ 7.2e-03 -9.6e-04 -1.6e-03]
   [-4.3e-03  3.4e-02 -2.4e-03]
   [ 3.4e-02  2.9e-02 -7.6e-03]
   [ 1.4e-02 -1.4e-02 -2.8e-03]
   [-6.2e-03  3.4e-02  4.6e-03]
   [ 3.8e-02  3.0e-02 -6.6e-03]
   [ 1.1e-02  3.5e-02 -1.4e-03]
   [ 9.3e-03  3.7e-02  1.2e-04]
   [ 2.3e-02  1.2e-02 -4.1e-03]
   [ 1.0e-02 -1.9e-02 -1.5e-03]
   [-1.3e-02  4.6e-02  3.0e-04]
   [ 3.8e-02  3.0e-02 -7.2e-03]
   [ 2.8e-02  1.2e-02 -1.4e-04]
   [ 1.0e-02 -2.8e-02 -1.1e-02]
   [ 3.3e-02  2.5e-02 -2.8e-03]
   [ 4.0e-03 -2.3e-02  8.1e-03]
   [-7.7e-03  3.8e-02  2.5e-03]
   [-3.2e-02  2.2e-02  1.1e-02]
   [ 3.3e-02 -8.0e-03  1.1e-03]
   [ 4.0e-02  1.7e-02 -2.2e-04]
   [-4.4e-03  3.3e-02  1.7e-03]
   [-9.9e-03  2.2e-02 -2.4e-03]
   [ 3.9e-02  2.2e-02  1.1e-03]
   [ 3.7e-02  2.4e-02  1.2e-02]
   [ 2.4e-02  1.8e-02 -1.4e-04]
   [ 1.3e-02  2.5e-02  2.3e-03]
   [ 1.9e-02  2.0e-02 -1.6e-03]
   [-2.5e-02  2.7e-02 -2.3e-03]
   [ 3.5e-02  1.7e-02  2.5e-03]
   [ 1.3e-02 -2.2e-02 -2.9e-03]
   [ 2.2e-02  1.4e-02  2.5e-03]
   [-3.0e-02  3.1e-02 -2.2e-03]
   [ 1.2e-02 -2.8e-02 -1.1e-02]
   [-2.5e-02  1.5e-02 -5.0e-03]
   [ 1.6e-02 -2.6e-02  9.8e-04]
   [-2.8e-02  2.9e-02 -7.1e-03]
   [ 3.3e-02  1.8e-02 -2.9e-03]
   [ 5.9e-04  1.3e-02  2.7e-03]
   [-1.0e-02 -6.4e-03 -2.9e-03]
   [-2.5e-02  2.4e-02  2.3e-04]
   [-3.7e-03  3.8e-02 -1.3e-03]
   [-3.1e-02  2.0e-02  9.5e-03]
   [ 3.3e-02  2.9e-02 -6.6e-03]
   [-2.7e-03  7.0e-03  1.6e-03]
   [-2.3e-02  2.2e-02 -2.1e-03]
   [ 2.2e-03  1.5e-03 -4.3e-03]
   [-1.1e-02  2.6e-02 -1.3e-03]
   [ 8.7e-03 -2.6e-02 -1.1e-02]
   [ 3.2e-02 -7.2e-03  3.5e-03]
   [ 1.0e-02  2.1e-02  2.6e-03]
   [-1.1e-02  4.6e-02  3.4e-03]
   [ 3.9e-02  2.6e-02  1.2e-02]
   [ 1.0e-02 -2.5e-02 -1.4e-02]
   [ 1.9e-02  2.0e-02 -5.8e-05]
   [ 5.0e-03  3.4e-02  2.6e-03]
   [ 2.8e-02  1.4e-02 -2.6e-03]
   [ 1.4e-03  7.1e-03 -2.5e-03]
   [-2.7e-02  2.2e-02 -6.3e-04]
   [ 3.0e-02  1.7e-02  2.8e-03]
   [ 1.1e-02  2.3e-02  1.5e-03]
   [ 3.2e-02  2.2e-02 -2.2e-04]
   [ 4.5e-03  3.5e-02  1.2e-04]
   [ 1.0e-02  2.7e-02  3.1e-03]
   [-2.6e-02  1.7e-02 -2.1e-03]
   [ 4.5e-02  1.8e-02 -3.9e-03]
   [ 2.3e-02  1.7e-03  2.4e-03]
   [ 4.1e-02  2.2e-02 -2.2e-04]]
# ---
# name: test_load[ball_and_stick-sdf].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-sdf].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[ball_and_stick-sdf].22
  [1 2 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 2 1 1
   1 1 1 2 1 1 1 1 1 1 1 1 1 1 2 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 2
   1 1 1 1 1 1 1 2 1 1 1 1 1 2 1 1 1 1 2 1 2 1 1 1 1 1]
# ---
# name: test_load[ball_and_stick-sdf].23
  [12.0 14.0  1.0 14.0  1.0  6.5 12.0 12.0 12.0 16.0 12.0 13.0  1.0 12.0
   12.0  1.0  1.0  1.0 12.0 12.0  1.0  6.5 12.0 13.0  6.5  1.0  1.0 13.0
   14.0 12.0 14.0 12.0 12.0 13.0 12.0  1.0 13.0 12.0  1.0 14.0 14.0 14.0
   12.0  1.0  1.0 14.0  1.0  6.5  1.0 12.0  1.0 16.0 12.0 12.0 14.0 12.0
    1.0 14.0 12.0 13.0  6.5 12.0 12.0 14.0  1.0  1.0  1.0  6.5  1.0 12.0
   12.0 16.0 12.0 12.0  1.0  1.0 12.0 12.0 12.0 14.0  1.0 16.0 12.0  1.0
    1.0  1.0 13.0 14.0 14.0 12.0 12.0 13.0 12.0 12.0 14.0 13.0 12.0  1.0
   12.0 12.0]
# ---
# name: test_load[ball_and_stick-sdf].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-sdf].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[ball_and_stick-sdf].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-sdf].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[ball_and_stick-sdf].7
  [6 7 1 7 1 4 6 6 6 8 6 7 1 6 6 1 1 1 6 6 1 4 6 7 4 1 1 7 7 6 7 6 6 7 6 1 7
   6 1 7 7 7 6 1 1 7 1 4 1 6 1 8 6 6 7 6 1 7 6 7 4 6 6 7 1 1 1 4 1 6 6 8 6 6
   1 1 6 6 6 7 1 8 6 1 1 1 7 7 7 6 6 7 6 6 7 7 6 1 6 6]
# ---
# name: test_load[ball_and_stick-sdf].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[ball_and_stick-sdf].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-mol].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[spheres-mol].13
  [[1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [0.8 0.2 0.2 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]]
# ---
# name: test_load[spheres-mol].14
  [[ 3.3e-02  1.0e-02 -1.4e-02]
   [-2.1e-02  2.9e-02  1.2e-02]
   [ 3.7e-02  1.3e-02  4.7e-03]
   [-3.6e-02 -6.8e-04  1.0e-02]
   [-2.6e-02 -2.7e-02  7.2e-03]
   [ 4.2e-02 -1.8e-03  2.0e-06]
   [ 2.0e-02  2.6e-03 -7.2e-03]
   [ 6.7e-03  2.0e-02  1.0e-02]
   [ 4.7e-03  2.6e-02 -1.2e-02]
   [ 3.4e-02  5.2e-03 -3.0e-06]
   [-2.3e-02 -3.6e-02  4.3e-03]
   [ 3.4e-02 -2.1e-02 -8.2e-03]
   [-1.6e-02 -2.0e-02 -1.2e-02]
   [-2.0e-02  1.8e-02 -8.8e-03]
   [ 4.5e-02  1.6e-02 -5.0e-03]
   [-5.4e-03 -3.2e-02  1.7e-02]
   [-2.3e-02  9.1e-03 -6.1e-03]
   [ 3.2e-04 -2.1e-02  7.1e-03]
   [ 4.9e-02  3.0e-03  5.0e-03]
   [ 1.6e-02  2.2e-02  6.0e-06]
   [ 5.9e-04 -8.4e-03 -8.0e-06]
   [-7.1e-03 -2.7e-02  1.2e-02]
   [ 4.0e-02  2.1e-02 -9.0e-03]
   [-2.4e-02  1.1e-02  6.5e-03]
   [-1.3e-02 -4.0e-02  1.4e-02]
   [-1.8e-02  3.2e-02  9.6e-03]
   [ 1.3e-02 -1.2e-02 -6.1e-03]
   [-3.6e-02  2.6e-02  1.3e-02]
   [-1.3e-02  2.9e-02 -6.1e-03]
   [-1.9e-02  1.0e-02  6.1e-03]
   [-3.4e-02 -3.1e-02  1.1e-05]
   [-1.2e-02 -1.9e-02 -1.1e-02]
   [-2.5e-02  1.5e-02 -1.0e-06]
   [-1.5e-02  3.3e-02  7.0e-06]
   [-3.2e-02  2.9e-02 -7.1e-03]
   [-1.3e-02 -4.0e-02  4.7e-03]
   [ 2.1e-02  1.5e-02 -9.0e-03]
   [-3.8e-03 -3.7e-02  1.4e-02]
   [ 6.4e-03  9.4e-03 -1.2e-02]
   [-2.9e-02  3.1e-02 -8.8e-03]
   [ 3.0e-02  8.5e-03 -9.0e-03]
   [ 4.2e-02 -1.1e-02  5.1e-03]
   [-2.0e-02 -2.0e-02  1.1e-05]
   [-6.3e-03 -2.4e-02  5.5e-03]
   [ 3.0e-02  8.5e-03  9.0e-03]
   [ 2.9e-02 -2.3e-02 -7.1e-03]
   [-9.5e-03  7.1e-03  6.1e-03]
   [-9.7e-03 -1.3e-02  1.2e-02]
   [-1.1e-02  1.4e-02  7.1e-03]
   [ 3.3e-02  2.6e-02 -1.4e-02]
   [-1.7e-02  4.3e-03  1.2e-02]
   [-2.2e-02  2.6e-02 -1.3e-02]
   [ 4.8e-03  1.4e-02 -6.1e-03]
   [ 2.1e-02 -1.0e-03  7.2e-03]
   [-2.7e-02  1.3e-02 -4.6e-03]
   [-2.1e-02  2.1e-02 -4.6e-03]
   [ 3.7e-02  7.8e-03 -8.2e-03]
   [-1.7e-02  7.7e-04  6.5e-03]
   [-1.9e-02 -3.2e-02  4.7e-03]
   [-1.7e-02 -2.7e-02 -1.4e-02]
   [ 2.5e-02  1.8e-02 -1.7e-02]
   [ 1.4e-04  1.3e-03 -6.1e-03]
   [ 8.6e-04 -1.3e-02 -6.5e-03]
   [-3.5e-02  5.9e-03 -5.4e-03]
   [ 3.8e-02 -2.4e-02 -5.0e-03]
   [-2.9e-02  2.1e-02 -7.2e-04]
   [-1.1e-02  4.6e-03  1.1e-02]
   [ 2.4e-02  1.3e-02  1.3e-02]
   [-8.9e-03 -2.7e-02 -7.7e-04]
   [-2.1e-02  2.1e-02  1.3e-02]
   [-3.3e-03  3.2e-03  7.1e-03]
   [-4.9e-03 -2.0e-02  7.2e-03]
   [ 2.9e-02  1.3e-02  8.4e-04]
   [-3.6e-02  1.6e-02  1.3e-02]
   [-6.2e-03  2.1e-02 -1.0e-06]
   [ 4.5e-02  1.6e-02  3.0e-06]
   [ 4.2e-02 -2.1e-02 -4.3e-03]
   [-4.8e-03 -2.4e-02 -8.9e-03]
   [-1.0e-02 -3.2e-02 -6.4e-04]
   [-1.8e-02  4.1e-02 -3.0e-06]
   [-2.3e-02  1.6e-02  1.4e-02]
   [ 3.2e-02  1.2e-02  1.4e-02]
   [-6.9e-03  2.9e-02  6.0e-06]
   [-1.7e-02 -3.7e-02 -1.4e-02]
   [-3.2e-02  2.9e-02  1.4e-02]
   [ 8.8e-03 -1.6e-02  1.1e-02]
   [ 3.0e-02 -8.0e-03  8.0e-06]
   [ 1.6e-02 -5.2e-03 -7.1e-03]
   [-3.3e-03 -1.0e-02 -1.2e-02]
   [-1.3e-02  1.8e-02 -6.0e-06]
   [ 4.3e-02 -1.6e-02 -5.0e-03]
   [-3.2e-03 -1.3e-02  1.1e-02]
   [-1.9e-02 -2.0e-02  5.5e-03]
   [ 2.2e-02  1.9e-02  6.1e-03]
   [-2.0e-02  3.6e-02 -8.2e-03]
   [-1.6e-02 -3.1e-02  1.1e-05]
   [ 2.8e-02  1.1e-03  7.2e-03]
   [-1.7e-02  2.1e-02  6.5e-03]
   [-1.3e-02 -3.1e-03  6.5e-03]
   [ 2.7e-02 -1.6e-02  5.1e-03]]
# ---
# name: test_load[spheres-mol].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-mol].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-mol].22
  [1 1 1 2 1 1 1 2 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load[spheres-mol].23
  [ 1. 12.  1. 16. 12.  1. 12. 16. 16. 14.  1.  1. 12.  1.  1.  1. 12. 12.
    1. 16. 12. 12.  1. 14.  1.  1. 12.  1. 12. 12.  1. 14. 14. 12. 12.  1.
    1.  1. 12.  1.  1.  1.  1. 14.  1. 12. 12. 14. 12.  1. 12.  1. 12. 12.
    1.  1.  1. 14.  1.  1.  1. 12. 14. 16.  1.  1. 14.  1.  1.  1. 12. 12.
    1.  1. 14. 12.  1.  1.  1.  1.  1. 12. 16.  1.  1. 14.  1. 12. 12. 12.
    1. 14. 14. 12.  1.  1. 12. 14. 14.  1.]
# ---
# name: test_load[spheres-mol].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-mol].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-mol].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-mol].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-mol].7
  [1 6 1 8 6 1 6 8 8 7 1 1 6 1 1 1 6 6 1 8 6 6 1 7 1 1 6 1 6 6 1 7 7 6 6 1 1
   1 6 1 1 1 1 7 1 6 6 7 6 1 6 1 6 6 1 1 1 7 1 1 1 6 7 8 1 1 7 1 1 1 6 6 1 1
   7 6 1 1 1 1 1 6 8 1 1 7 1 6 6 6 1 7 7 6 1 1 6 7 7 1]
# ---
# name: test_load[spheres-mol].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-mol].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].11
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-sdf].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[spheres-sdf].13
  [[1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.2 0.2 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.8 0.2 0.2 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]
   [1.0 1.0 1.0 1.0]
   [0.4 0.4 0.8 1.0]
   [0.2 0.2 0.8 1.0]
   [0.4 0.4 0.8 1.0]
   [1.0 1.0 1.0 1.0]]
# ---
# name: test_load[spheres-sdf].14
  [[ 5.9e-03 -3.3e-02 -5.4e-05]
   [-2.2e-02  2.8e-02  1.2e-02]
   [-2.2e-03  4.0e-02 -4.0e-03]
   [-5.8e-03  4.2e-03  1.2e-02]
   [ 2.4e-02 -5.8e-03  6.0e-03]
   [ 2.1e-02 -3.4e-02  4.8e-03]
   [ 2.2e-02 -6.5e-03 -6.6e-03]
   [ 2.0e-03  7.3e-03  1.2e-02]
   [-1.7e-04  1.4e-02 -1.4e-02]
   [ 1.7e-03  2.7e-02  1.9e-04]
   [ 3.8e-02  2.2e-02 -1.0e-03]
   [ 3.8e-02  1.8e-02  1.9e-03]
   [ 3.2e-02  3.2e-04 -1.1e-02]
   [-1.8e-02  8.8e-03 -5.0e-03]
   [ 2.4e-02 -1.7e-02 -2.2e-04]
   [ 1.7e-02 -2.5e-02 -2.3e-03]
   [ 3.3e-02  3.2e-02 -6.3e-03]
   [-1.4e-02 -1.6e-02  6.5e-03]
   [ 2.8e-02 -2.9e-02  9.9e-03]
   [ 1.3e-02  9.9e-03  9.8e-05]
   [ 4.6e-03 -1.6e-02 -1.3e-04]
   [ 4.0e-02 -5.8e-03  1.0e-02]
   [ 1.3e-02 -2.2e-02  5.0e-03]
   [ 1.3e-02  1.4e-02  6.4e-03]
   [ 9.6e-03 -3.2e-02 -5.5e-03]
   [-2.8e-02  2.0e-02  2.0e-02]
   [-9.2e-06 -2.1e-02 -6.3e-03]
   [-3.7e-02  3.4e-02 -5.5e-04]
   [-1.5e-02  2.8e-02 -5.9e-03]
   [-2.1e-02  9.6e-03  6.3e-03]
   [ 2.6e-02  2.8e-02 -5.3e-03]
   [ 9.7e-03  1.4e-02 -1.2e-02]
   [ 1.2e-02  1.8e-02 -1.4e-04]
   [-1.7e-02  3.2e-02  2.3e-04]
   [-3.4e-02  2.8e-02 -6.9e-03]
   [ 9.5e-03 -3.3e-02 -1.5e-02]
   [-5.8e-03 -2.8e-02  5.0e-03]
   [ 1.9e-02 -2.9e-02 -5.5e-03]
   [ 9.9e-03 -2.7e-04 -1.1e-02]
   [-2.7e-02  2.1e-02 -5.0e-03]
   [ 3.4e-03 -3.5e-02  5.0e-03]
   [ 4.6e-02  2.7e-02  1.5e-02]
   [ 4.1e-02  3.8e-02 -5.3e-03]
   [ 1.6e-02  9.4e-03  6.1e-03]
   [-9.1e-03  3.6e-02  3.0e-04]
   [ 1.6e-02 -3.2e-02 -7.4e-03]
   [ 1.4e-02 -6.8e-03  5.9e-03]
   [ 1.2e-02  2.1e-02  1.4e-02]
   [ 1.2e-02  3.7e-04  6.9e-03]
   [ 5.9e-03 -1.7e-02 -5.4e-05]
   [ 3.9e-02  2.8e-02  1.1e-02]
   [-2.0e-02  1.7e-02 -9.3e-03]
   [ 8.5e-03  4.1e-03 -5.7e-03]
   [ 8.6e-03 -1.0e-02  6.9e-03]
   [-2.4e-02  3.6e-03 -6.7e-04]
   [-1.8e-02  1.2e-02 -6.7e-04]
   [ 1.6e-02 -2.5e-02 -3.3e-03]
   [ 2.0e-02  3.8e-03  6.4e-03]
   [ 3.5e-03 -2.5e-02 -1.5e-02]
   [ 3.7e-02  2.0e-02 -1.1e-02]
   [-1.7e-03 -2.5e-02 -3.2e-03]
   [-1.4e-02  4.0e-03 -5.3e-03]
   [ 2.3e-02  2.1e-02 -7.1e-03]
   [-3.7e-03  1.2e-02 -6.1e-03]
   [ 4.2e-02  1.5e-02  5.0e-03]
   [-3.0e-02  2.9e-02 -1.4e-02]
   [ 2.6e-02  7.6e-03  1.0e-02]
   [-1.6e-02  4.0e-02  4.6e-03]
   [ 4.6e-02  2.0e-02  2.7e-03]
   [-2.1e-02  2.9e-02 -5.5e-04]
   [ 2.0e-02 -1.1e-02  6.9e-03]
   [ 4.2e-02  3.2e-04  6.0e-03]
   [-1.1e-02  4.0e-02 -7.9e-03]
   [-3.7e-02  2.4e-02 -5.5e-04]
   [ 3.1e-02  2.4e-02 -1.4e-04]
   [ 8.9e-03  4.0e-02  2.3e-04]
   [ 4.7e-02  1.8e-02  5.7e-03]
   [ 5.0e-02  2.3e-02 -5.5e-03]
   [ 1.2e-02 -2.5e-02 -2.0e-02]
   [-2.8e-02  3.0e-02  1.1e-02]
   [-2.3e-02  2.5e-02  2.0e-04]
   [-4.1e-03  3.6e-02  1.4e-02]
   [-1.3e-02  1.8e-02  9.8e-05]
   [ 3.7e-02  1.0e-02 -1.1e-02]
   [-3.2e-02  3.7e-02  2.0e-04]
   [ 3.7e-03  3.8e-02  1.1e-02]
   [ 3.4e-02  3.0e-02  1.0e-02]
   [ 2.8e-03 -1.4e-02 -7.4e-03]
   [-1.7e-02 -6.3e-03 -1.0e-02]
   [ 1.1e-02  4.6e-03 -2.1e-04]
   [ 4.8e-02  2.3e-02  5.0e-03]
   [ 1.9e-02  2.1e-02  1.2e-02]
   [ 2.0e-03  1.4e-02  6.1e-03]
   [-1.4e-02  4.3e-02  6.3e-03]
   [-3.0e-02  2.5e-02  2.3e-03]
   [ 4.5e-02  2.8e-02 -5.3e-03]
   [-7.6e-03  2.5e-02  7.4e-03]
   [ 2.0e-02  2.4e-02  6.4e-03]
   [ 8.3e-03  3.2e-02  7.2e-03]
   [ 3.2e-02  2.3e-02  1.5e-02]]
# ---
# name: test_load[spheres-sdf].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].16
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].18
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-sdf].20
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].21
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_load[spheres-sdf].22
  [1 1 1 1 2 1 1 1 1 1 1 1 2 1 1 1 1 2 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 2 1 1
   1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load[spheres-sdf].23
  [ 1. 12.  1. 12. 16.  1. 14. 12. 12. 14.  1.  1. 16.  1.  1.  1. 12. 16.
    1. 12. 14. 16.  1. 14.  1.  1. 12.  1. 12. 12.  1. 12. 14. 12. 12.  1.
    1.  1. 14.  1.  1.  1.  1. 12.  1. 12. 12. 12. 12.  1. 12.  1. 14. 12.
    1.  1.  1. 14.  1.  1.  1. 16. 12. 12.  1.  1. 14.  1.  1.  1. 12. 16.
    1.  1. 14. 12.  1.  1.  1.  1.  1. 12. 12.  1.  1. 14.  1. 12. 16. 12.
    1. 12. 12. 12.  1.  1. 12. 14. 12.  1.]
# ---
# name: test_load[spheres-sdf].3
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-sdf].4
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_load[spheres-sdf].5
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-sdf].6
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_load[spheres-sdf].7
  [1 6 1 6 8 1 7 6 6 7 1 1 8 1 1 1 6 8 1 6 7 8 1 7 1 1 6 1 6 6 1 6 7 6 6 1 1
   1 7 1 1 1 1 6 1 6 6 6 6 1 6 1 7 6 1 1 1 7 1 1 1 8 6 6 1 1 7 1 1 1 6 8 1 1
   7 6 1 1 1 1 1 6 6 1 1 7 1 6 8 6 1 6 6 6 1 1 6 7 6 1]
# ---
# name: test_load[spheres-sdf].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[spheres-sdf].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].11
  AttributeError("The selected attribute 'atom_name' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].13
  [[0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]]
# ---
# name: test_load[surface-mol].14
  [[ 0.0  0.0  0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0  0.0 -0.0]
   [-0.0  0.0  0.0]
   [ 0.0  0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [-0.0  0.0  0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0  0.0  0.0]
   [-0.0 -0.0  0.0]
   [ 0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [-0.0 -0.0  0.0]
   [-0.0  0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0  0.0  0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0  0.0  0.0]
   [ 0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [ 0.1  0.0  0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [-0.0  0.0  0.0]
   [-0.0  0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [-0.0  0.0 -0.0]
   [-0.0  0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [-0.0  0.0  0.0]
   [ 0.0  0.0  0.0]
   [-0.0  0.0 -0.0]
   [ 0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [-0.0  0.0  0.0]
   [ 0.0  0.0  0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0 -0.0  0.0]
   [-0.0 -0.0 -0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [-0.0  0.0  0.0]
   [-0.0  0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [-0.0 -0.0  0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [ 0.0 -0.0  0.0]
   [ 0.0  0.0 -0.0]
   [ 0.0  0.0 -0.0]
   [-0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [ 0.0  0.0  0.0]
   [-0.0 -0.0  0.0]
   [ 0.0 -0.0 -0.0]
   [-0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [-0.0  0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0 -0.0 -0.0]
   [-0.0  0.0 -0.0]
   [-0.0  0.0  0.0]
   [ 0.0  0.0 -0.0]
   [-0.0 -0.0  0.0]
   [-0.0 -0.0  0.0]
   [ 0.0 -0.0 -0.0]
   [ 0.0 -0.0  0.0]
   [ 0.0  0.0 -0.0]
   [-0.0 -0.0  0.0]
   [-0.0 -0.0  0.0]
   [ 0.0  0.0  0.0]
   [-0.0 -0.0 -0.0]
   [-0.0  0.0 -0.0]
   [-0.0  0.0 -0.0]]
# ---
# name: test_load[surface-mol].15
  AttributeError("The selected attribute 'is_backbone' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].16
  AttributeError("The selected attribute 'is_alpha_carbon' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].17
  AttributeError("The selected attribute 'is_solvent' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].18
  AttributeError("The selected attribute 'is_nucleic' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].19
  AttributeError("The selected attribute 'is_peptide' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].2
  AttributeError("The selected attribute 'vdw_radii' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].20
  AttributeError("The selected attribute 'is_hetero' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].21
  AttributeError("The selected attribute 'is_carb' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].22
  AttributeError("The selected attribute 'bond_type' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].23
  AttributeError("The selected attribute 'mass' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].3
  AttributeError("The selected attribute 'lipophobicity' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].4
  AttributeError("The selected attribute 'charge' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].5
  AttributeError("The selected attribute 'res_id' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].6
  AttributeError("The selected attribute 'res_name' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].7
  AttributeError("The selected attribute 'atomic_number' does not exist on the mesh.")
# ---
# name: test_load[surface-mol].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[surface-mol].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf]
  AttributeError("The selected attribute 'b_factor' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].1
  AttributeError("The selected attribute 'occupancy' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].10
  AttributeError("The selected attribute 'atom_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].11
  AttributeError("The selected attribute 'atom_name' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].12
  AttributeError("The selected attribute 'sec_struct' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].13
  [[0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]
   [0. 0. 0. 0.]]
# ---
# name: test_load[surface-sdf].14
  [[-6.8e-03 -3.6e-02  7.8e-03]
   [ 1.6e-02  3.8e-02  1.6e-02]
   [-4.5e-03  5.1e-02  1.4e-02]
   [ 2.3e-02 -3.9e-02  7.3e-03]
   [-4.0e-02  5.9e-03 -7.8e-03]
   [-1.2e-03 -1.2e-02  1.7e-02]
   [ 5.4e-02  2.4e-02  8.1e-03]
   [ 2.9e-02 -2.8e-02  1.8e-02]
   [ 4.0e-02 -1.7e-02 -1.2e-02]
   [-4.1e-02  2.4e-02  1.7e-02]
   [ 1.4e-02  4.2e-03 -1.9e-02]
   [ 3.0e-02  3.3e-02  1.8e-02]
   [-2.1e-02  2.6e-02 -1.8e-02]
   [ 3.0e-02  2.8e-02 -1.9e-02]
   [-1.7e-04 -3.2e-02 -1.5e-02]
   [-2.0e-02  5.1e-02 -8.0e-03]
   [ 2.4e-03  4.4e-02  1.5e-02]
   [ 4.7e-02 -1.1e-02 -1.2e-02]
   [ 2.1e-02  1.2e-02 -1.8e-02]
   [ 3.1e-02 -3.0e-02 -5.2e-03]
   [ 5.2e-02 -1.1e-02  1.2e-03]
   [-3.6e-02  5.7e-03  6.6e-03]
   [ 2.0e-02  4.7e-02  4.5e-03]
   [-9.4e-03  5.8e-02 -2.8e-03]
   [-3.6e-02  3.8e-02 -1.5e-02]
   [ 4.1e-02  2.5e-02  2.4e-02]
   [-3.9e-02  7.8e-03  3.4e-03]
   [-2.4e-02  4.1e-02  9.6e-03]
   [ 6.0e-03  5.3e-02  1.4e-03]
   [-9.9e-03  1.2e-02 -1.7e-02]
   [ 2.2e-02  2.1e-02 -1.6e-02]
   [-1.5e-02 -1.8e-02  1.3e-02]
   [ 5.7e-03  2.0e-02 -1.9e-02]
   [ 4.9e-02 -1.0e-03  7.6e-03]
   [-3.9e-02  9.1e-03  8.0e-03]
   [ 3.5e-02  5.8e-03  1.7e-02]
   [-4.4e-03 -1.7e-02 -1.8e-02]
   [ 5.3e-02  1.1e-02 -1.6e-02]
   [ 3.8e-02 -2.6e-02  2.6e-03]
   [ 6.7e-03  4.8e-02  1.0e-02]
   [ 4.8e-02  2.8e-02  2.2e-02]
   [-2.6e-02 -1.3e-02 -2.4e-03]
   [ 5.1e-02  3.2e-02  8.4e-03]
   [-1.1e-03 -3.8e-02 -3.6e-04]
   [ 2.8e-02 -3.8e-02  8.0e-03]
   [ 5.0e-02  1.8e-02 -1.8e-02]
   [-1.5e-02  2.0e-03 -1.6e-02]
   [ 4.3e-02  3.6e-02  1.7e-02]
   [ 4.5e-02 -1.5e-02 -1.1e-02]
   [ 4.8e-02  3.6e-02 -3.9e-03]
   [-2.6e-02  4.2e-02  5.9e-03]
   [-2.2e-02  3.6e-02  1.6e-02]
   [ 5.6e-02  1.9e-02  1.2e-03]
   [ 2.9e-02  4.2e-02 -1.4e-02]
   [ 4.6e-02  3.4e-02 -1.6e-02]
   [-4.1e-03 -2.9e-02 -9.8e-03]
   [-9.9e-03  2.0e-02  1.9e-02]
   [ 2.4e-02 -1.8e-02 -2.0e-02]
   [ 4.3e-02 -4.5e-03 -1.5e-02]
   [ 5.3e-02  2.1e-03  5.9e-05]
   [ 4.4e-02  4.2e-02 -9.3e-03]
   [ 3.6e-02  3.4e-02  1.9e-02]
   [-1.6e-02  2.0e-02  2.2e-02]
   [ 4.6e-02  3.9e-02 -1.2e-02]
   [-4.3e-02  3.2e-02 -8.8e-03]
   [ 3.9e-02 -2.2e-02 -6.5e-03]
   [ 4.1e-02  1.7e-02  2.4e-02]
   [-2.1e-02 -9.5e-03  1.3e-02]
   [ 3.0e-02 -1.1e-02 -1.7e-02]
   [-2.0e-03  2.6e-02 -1.8e-02]
   [ 4.6e-03  5.1e-03  1.9e-02]
   [-3.0e-02  3.6e-02 -1.7e-02]
   [ 2.8e-02 -3.6e-02  1.2e-02]
   [-1.9e-02 -2.1e-02 -2.2e-03]
   [-3.6e-02  7.8e-03  1.3e-02]
   [-1.3e-02  1.7e-02  2.0e-02]
   [ 3.8e-02  4.3e-02  2.8e-03]
   [ 4.9e-02  8.5e-03  1.2e-02]
   [ 4.5e-03  1.3e-02  1.9e-02]
   [-5.7e-03 -1.2e-02 -1.8e-02]
   [-3.3e-02  9.0e-03 -1.8e-02]
   [ 3.1e-02 -3.5e-02  7.8e-03]
   [ 4.7e-02  3.1e-02  2.1e-02]
   [-2.2e-02  8.9e-03  2.0e-02]
   [-4.0e-02  3.2e-02 -1.5e-02]
   [ 1.8e-02 -3.3e-02  1.6e-02]
   [-3.9e-03 -2.3e-02 -1.5e-02]
   [-2.9e-02  3.1e-02 -2.0e-02]
   [-2.6e-02  2.0e-02  2.5e-02]
   [-1.4e-03  3.2e-03 -1.7e-02]
   [-2.8e-02  3.9e-03  1.4e-02]
   [ 2.9e-02 -2.8e-02 -9.5e-03]
   [ 5.8e-03 -3.1e-02 -2.3e-02]
   [ 2.8e-02  3.9e-02  1.0e-02]
   [ 4.2e-02  2.0e-02 -2.0e-02]
   [ 3.8e-02  4.4e-02 -1.2e-02]
   [ 1.2e-02  3.6e-02  1.7e-02]
   [-4.2e-03  4.6e-02  1.5e-02]
   [-4.1e-02  1.5e-02 -3.2e-03]
   [-3.0e-03 -3.2e-02 -8.2e-03]]
# ---
# name: test_load[surface-sdf].15
  AttributeError("The selected attribute 'is_backbone' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].16
  AttributeError("The selected attribute 'is_alpha_carbon' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].17
  AttributeError("The selected attribute 'is_solvent' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].18
  AttributeError("The selected attribute 'is_nucleic' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].19
  AttributeError("The selected attribute 'is_peptide' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].2
  AttributeError("The selected attribute 'vdw_radii' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].20
  AttributeError("The selected attribute 'is_hetero' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].21
  AttributeError("The selected attribute 'is_carb' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].22
  AttributeError("The selected attribute 'bond_type' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].23
  AttributeError("The selected attribute 'mass' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].3
  AttributeError("The selected attribute 'lipophobicity' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].4
  AttributeError("The selected attribute 'charge' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].5
  AttributeError("The selected attribute 'res_id' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].6
  AttributeError("The selected attribute 'res_name' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].7
  AttributeError("The selected attribute 'atomic_number' does not exist on the mesh.")
# ---
# name: test_load[surface-sdf].8
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load[surface-sdf].9
  AttributeError("The selected attribute 'entity_id' does not exist on the mesh.")
# ---
